lang2/macro/tests/ui/fail/01-constructor-returns.stderr
error: #[ink(constructor)] functions must not have a return type
  --> $DIR/01-constructor-returns.rs:12:38
   |
12 |         fn invalid_return(&mut self) -> Self {}
   |                                      ^^^^^^^
